# xgdal

./: .gitignore  CLAUDE.md  README.md  combined_mdim.vrt  example-mdim.ipynb  example.ipynb  pyproject.toml
src/xgdal/: __init__.py  accessor.py  backend.py  env.py  vrt.py
tests/: test_backend.py
