[project]
authors = [{name = "Scott Henderson", email = "3924836+scottyhq@users.noreply.github.com"}]
dependencies = ["numpy", "xarray", "xproj", "rasterix>=0.2.1,<0.3"]
name = "xgdal"
requires-python = ">= 3.11"
version = "0.1.0"

[project.entry-points."xarray.backends"]
xgdal = "xgdal.backend:XGDALBackendEntrypoint"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
xgdal = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ruff = "*"
pytest = ">=8,<9"
rioxarray = ">=0.21.0,<0.22"
ipykernel = ">=7.2.0,<8"
rich = ">=14.3.3,<15"

[tool.pixi.feature.dev.tasks]
test = "pytest"
lint = "ruff check src tests"
format = "ruff format src tests"


[tool.pixi.environments]
dev = ["dev"]

[tool.pixi.dependencies]
gdal = ">=3.12.2,<4"
xarray = ">=2026.2.0,<2027"
xproj = ">=0.2.1,<0.3"
matplotlib-base = ">=3.10.8,<4"
dask = ">=2026.1.2,<2027"
xmlschema = ">=4.3.1,<5"
